Fix spacing of start request button
When the second column is longer than the first, the last p tag overlaps the
button. Add padding to the second column to give space for the button. Remove
the absolute positioning on mobile so the content flows normally.

Also give the first column more gutter to balance with the left padding on the
second column as per design.

--- a/www.foia.gov/_sass/modules/_agency_component_search.scss
+++ b/www.foia.gov/_sass/modules/_agency_component_search.scss
@@ -1,29 +1,32 @@
+$section-padding-bottom: $space-1x * 11;
+
 .agency-component-search {
   @extend .panel_reverse-color;
   border-top: $space-2x solid $color-primary-alt;
   padding-top: $space-5x;
-  padding-bottom: $space-1x * 11;
+  padding-bottom: $section-padding-bottom;
   position: relative;
   .start-request {
-    position: absolute;
-    bottom: $space-1x * 11;
     font-weight: $font-bold;
   }
+  .start-request-container {
+    position: relative;
 
-  h3 {
-    font-size: $h2-font-size;
-    margin-top: $space-1x;
-    margin-bottom: $space-5x;
-  }
-  h4 {
-    font-size: $base-font-size;
-    font-family: $font-sans;
+    @media all and (min-width: $medium-screen) {
+      // Make space for the start-request button
+      padding-bottom: 5rem;
+
+      .start-request {
+	bottom: 0;
+	position: absolute;
+      }
+    }
   }
   .usa-width-one-half {
     margin-top: $space-4x;
     @media all and (min-width: $medium-screen) {
       border-right: 1px solid $color-primary-alt;
-      padding-right: $space-2x;
+      padding-right: $space-4x;
       &:last-child {
         border: none;
         padding-left: 0;
